# routes/auth_routes.js
@@ -9,7 +9,7 @@ const middleware = require('../middlewares/authentication');
 route.post('/register',expressValidation(authValidate.register), userController.register);
 route.post('/verify-email',expressValidation(authValidate.verifyEmail),userController.verifyEmail);
 route.post('/login',expressValidation(authValidate.login), userController.login);
-route.post('/facebook',middleware.validateFacebookToken,userController.generateJWT);
+route.get('/facebook',middleware.validateFacebookToken,userController.generateJWT);
 route.post('/forgot-password',expressValidation(authValidate.forgotPassword),userController.forgotPassword);
 route.post('/change-forgot-password',expressValidation(authValidate.changeForgotPassword),userController.changeForgotPassword);
 
