# swagger.yaml
@@ -77,7 +77,136 @@ paths:
       responses:
         200:
           description: "Response on successful request"
-      x-swagger-router-controller: "User"    
+      x-swagger-router-controller: "User"
+  /auth/forgot-password:
+    post:
+      tags:
+      - Authentication
+      summary: "Forgot Password"
+      description: "Forgot Password"
+      operationId: "Forgot Password"
+      consumes:
+      - "application/json"
+      produces:
+      - "applicaion/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: Forgot Password
+        required: true
+        schema:
+          $ref: "#/definitions/ForgotPassword"
+      responses:
+        200:
+          description: "Response on successful request"
+      x-swagger-router-controller: "User"
+  /auth/change-forgot-password:
+    post:
+      tags:
+      - Authentication
+      summary: "Forgot Password"
+      description: "Forgot Password"
+      operationId: "Forgot Password"
+      consumes:
+      - "application/json"
+      produces:
+      - "applicaion/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: Forgot Password
+        required: true
+        schema:
+          $ref: "#/definitions/ChangeForgotPassword"
+      responses:
+        200:
+          description: "Response on successful request"
+      x-swagger-router-controller: "User"
+  /auth/facebook:
+    get:
+      summary: Facebook access token validation
+      description: Facebook access token validation
+      tags:
+      - "Authentication"
+      parameters:
+        - in: query
+          name: access_token
+          type: string
+          required: false
+          description: Facebook Access Token
+      responses:
+        200:
+          description: OK
+  /profile/change-password:
+    post:
+      tags:
+      - Profile
+      summary: "Change Password"
+      description: "Change Password"
+      operationId: "Change Password"
+      consumes:
+      - "application/json"
+      produces:
+      - "applicaion/json"
+      parameters:
+      - name: "x-access-token"
+        in: "header"
+        description: Authentication Token
+        type: "string"
+        required: true
+      - in: "body"
+        name: "body"
+        description: Change Password
+        required: true
+        schema:
+          $ref: "#/definitions/ChangePassword"
+      responses:
+        200:
+          description: "Response on successful request"
+      x-swagger-router-controller: "User"
+  /profile/update-profile:
+    post:
+      tags:
+      - Profile
+      summary: "Update Profile"
+      description: "Update Profile"
+      operationId: "Update Profile"
+      consumes:
+      - "application/json"
+      produces:
+      - "applicaion/json"
+      parameters:
+      - name: "x-access-token"
+        in: "header"
+        description: Authentication Token
+        type: "string"
+        required: true
+      - in: "body"
+        name: "body"
+        description: Change Password
+        required: true
+        schema:
+          $ref: "#/definitions/UpdateProfile"
+      responses:
+        200:
+          description: "Response on successful request"
+      x-swagger-router-controller: "User"
+  /profile/me:
+    get:
+      summary: Get Profile Details
+      description: Get Profile Details
+      tags:
+      - "Profile"
+      parameters:
+        - name: "x-access-token"
+          in: "header"
+          description: Authentication Token
+          type: "string"
+          required: true
+      responses:
+        200:
+          description: OK                
+                          
 
 
 definitions:
@@ -127,4 +256,65 @@ definitions:
       code:
         type: "string"
         description: Verification code
+  ForgotPassword:
+    type: object
+    required:
+    - "email"
+    properties:
+      email:
+        type: "string"
+        description: Fogot Password Email
+  ChangeForgotPassword:
+    type: object
+    required:
+    - "code"
+    - "password"
+    properties:
+      code:
+        type: "string"
+        description: Fogot Password Code
+      password:
+        type: "string"
+        description: New Password
+  ChangePassword:
+    type: object
+    required:
+    - "old_password"
+    - "new_password"
+    properties:
+      old_password:
+        type: "string"
+        description: Old Password
+      new_password:
+        type: "string"
+        description: New Password
+  UpdateProfile:
+    type: object
+    required:
+    - "firstname"
+    - "lastname"
+    - "phone"
+    - "about"
+    - "location"
+    - "gender"
+    properties:
+      firstname:
+        type: string
+        description: First name
+      lastname:
+        type: string
+        description: Last name
+      about:
+        type: "string"
+        description: About
+      location:
+        type: "string"
+        description: |
+          Location
+      phone:
+        type: string
+        description: Contact number
+      gender:
+        type: string
+        description: Gender                            
       
